Added an api to fetch random joke alongside tests
